# weil

./: .env  Cargo.toml  README.md
migrations/2023-04-11-173556_users/: up.sql
migrations/2023-04-12-205502_users_modify_id/: down.sql  up.sql
src/: config.rs  handlers.rs  handlers_tests.rs  main.rs  models.rs  repository.rs  repository_tests.rs  schema.rs
