[package]
edition = "2021"
name = "weil"
version = "0.1.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-rt = "2.8.0"
actix-web = "4.3.1"
diesel = {version = "2.0.3", features = ["postgres", "r2d2"]}
dotenv = "0.15.0"
env_logger = "0.10.0"
log = "0.4.17"
serde = {version = "1.0.160", features = ["derive"]}

[dev-dependencies]
env_logger = "0.10.0"
log = "0.4.17"
serde_json = "1.0.95"
